# vlrinspect

./: .gitignore  README.md  app.py  flake.nix  pyproject.toml
scraper/: __init__.py  history.py  team.py  upcoming.py
src/models/: __init__.py  game.py  match.py  match_history.py
src/pages/: __init__.py  home.py  map.py  overview.py  player.py
src/scraper/: __init__.py  history.py  team.py
src/utils/: utils.py
src/visualizer/: __init__.py  map.py  overall.py  overview.py  player.py
src/visualizer/logic/: map.py  overall.py  overview.py  player.py  team.py
utils/: utils.py
