[project]
name = "vlrinspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "scikit-learn>=1.7.2",
    "selectolax>=0.3.32",
    "streamlit>=1.48.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "assets",
    "models",
    "pages",
    "scraper",
    "utils",
    "visualizer",
]

